# embedded_learn

./: abstract.cpp  crash.cpp  debug_demo.cpp
buoi1/: app  array.cpp  main.cpp
buoi12/: app  cost_copy.cpp  log_entry.cpp
buoi13/: app  atomic_stop.cpp  data_race.cpp  deadlock.cpp  main  thread.cpp  thread_queue_safe.cpp
buoi7/: lesson7.cpp
buoi8/: assert  assert.cpp  error_simple.cpp  exception.cpp  fixed_buffer.cpp  option.cpp  safe_access.cpp  student_manager.cpp  variant.cpp  variant_error_enum.cpp  visit.cpp
cp/: app  dp.cpp  dsu.cpp  main  paint.cpp  training.cpp
embedded-evnt-controller/: CMakeLists.txt
embedded-evnt-controller/app/: main.cpp
embedded-evnt-controller/deployment/: README-deployment.md
embedded-evnt-controller/deployment/systemd/: vehicle-controller.service
embedded-evnt-controller/deployment/yocto/meta-vehicle/conf/: layer.conf
embedded-evnt-controller/deployment/yocto/meta-vehicle/recipe-apps/vehicle-controller/: vehicle-controller.bb
embedded-evnt-controller/deployment/yocto/meta-vehicle/recipe-apps/vehicle-controller/file/: vehicle-controller.service
embedded-evnt-controller/include/: BlockingEventQueue.hpp  Button.hpp  ButtonTask.hpp  Command.hpp  CommandParser.hpp  ControllerTask.hpp  Event.hpp  EventLoop.hpp  EventQueue.hpp  FakeInterrupts.hpp  GpioPin.hpp  GpioPort.hpp  GpioTypes.hpp  Led.hpp  Register32.hpp  RingBuffer.hpp  SimpleController.hpp  SystemState.hpp  TaskStats.hpp  TimerTask.hpp  UartCommandService.hpp  UartTask.hpp  VehicleController.hpp
embedded-evnt-controller/src/: Button.cpp  CommandParser.cpp  GpioPin.cpp  GpioPort.cpp  Led.cpp  Register32.cpp  SimpleController.cpp  VehicleController.cpp
task-manager/: .clang-format  .clang-tidy  CMakeLists.txt  main.cpp
task-manager/include/app/: Task.h  TaskManager.h
task-manager/src/: Task.cpp  TaskManager.cpp
task-manager/tests/: TaskManagerTest.cpp
